# search-engine

./: .env  .gitignore  Cargo.toml
data/: index.html  indexOld.html  seed_urls.txt
src/: crawler.rs  inverted_index.rs  main.rs  url_index.rs
