[package]
name = "search-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest =  "0.12.18"
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["full"] }
lazy_static = "1.5.0"
md5 = "0.7.0"
axum = { version = "0.8.4" , features = ["macros"] }
serde = { version = "1.0.219" ,  features = ["derive"] }
chrono = "0.4.41"